:sparkles: Actividad1 Resuelta

--- a/contenido/pag18.html
+++ b/contenido/pag18.html
@@ -25,5 +25,13 @@
     <div id="actividad-cuestionario">
     </div>
    
+    <div id="retroActividad1">
+        <figure class="cont-imagen">
+            <img src="/build/img/contenido/Pag18/persona2.svg" alt="persona">
+        </figure>
+        <div class="cont-mensaje">
+            <p>¡Muy bien! Espero que esta actividad te haya refrescado la memoria, ahora continuemos con la segunda parte de tu curso PLD/CFT.</p>
+        </div>
+    </div>
 </body>
 </html>
