--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -9,7 +9,7 @@
 <body>
     <div id="cont-intro19">
         <div class="titulo">
-            <p>En la politica de identificación</p>
+            <h3>En la politica de identificación</h3>
         </div>
 
         <div class="tarjetas">
@@ -32,6 +32,116 @@
                     </li>
                 </ul>
             </div>
+        </div>
+
+        <div id="titulo2">
+            <h3>Se adiciona un capítulo de Enfoque Basado en Riesgo.</h3>
+        </div>
+
+        <div id="columnas">
+            <div id="columna1">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag19/persona-pizarra.svg" alt="">
+                </figure>
+                <div class="cuadro">
+                    <div class="titulo">
+                        <h3>Para implementar</h3>
+                    </div>
+                    <div class="info">
+                        <p>Una metodología de Evaluación de Grado de Riesgos que permita identificar el riesgo de Lavado de Dinero y financiamiento al Terrorismo al que se encuentra expuesta la Compañía.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="columna2">
+                <div id="caja1">
+                    <div class="titulo">
+                        <h3>En la Política de Conocimiento:</h3>
+                    </div>
+                    <div class="contenedor1_1">
+                        <div class="cont-globo">
+                            <div class="globo">
+                                <p>
+                                    En operaciones celebradas de forma no presencial, deberá obtenerse la información relativa a la geolocalización.
+    
+                                </p>
+                            </div>
+                        </div>
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag19/persona-esc.svg" alt="">
+                        </figure>
+                    </div>
+                </div>
+                <div id="caja2">
+                    <div class="globo">
+                        <p>Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de  los clientes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="cards">
+            <div class="operaciones">
+                <div class="titulo">
+                    <h3>En Operaciones Relevantes, Inusuales e Internas Preocupantes: </h3>
+                </div>
+
+                <div class="columnas">
+                    <div class="tarjetas1_1" id="card1">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag19/circulo1.svg" alt="">
+                        </figure>
+                        <div class="info" id="info1">
+                            <p>
+                                Ahora las operaciones <span>relevantes</span> se reportarán por un monto igual o superior a <span>$7,500</span> dólares de los Estados Unidos.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="tarjetas1_1" id="card2">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag19/circulo2.svg" alt="">
+                        </figure>
+                        <div class="info" id="info2">
+                            <p>
+                                <span>Las operaciones inusuales e internas preocupantes</span> deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado conese carácter.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="estructuras">
+                <div class="titulo">
+                    <h3>En Estructuras Internas:</h3>
+                </div>
+
+                <div class="tarjetas1_1" id="card3">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag19/circulo3.svg" alt="">
+                    </figure>
+                    <div class="info" id="info3">
+                        <p>
+                            Podrá nombrarse a un <span>Oficial de Cumplimiento</span> interino, en caso de ausencia temporal del mismo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="capacitacion">
+                <div class="titulo">
+                    <h3>En Capacitación y Difusión:</h3>
+                </div>
+                <div class="tarjetas1_1" id="card4">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag19/circulo4.svg" alt="">
+                    </figure>
+                    <div class="info" id="info4">
+                        <p>
+                            La Capacitación deberá ser tomada <span>también por los miembros de los Consejos de Administración.</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
