--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -11,127 +11,118 @@
 
 <body>
     <div id="cont1-pag17">
-        <figure class="personaje1">
+        <figure class="img-personaje1">
             <img src="./build/img/contenido/Pag17/persona1.svg" alt="persona 1">
         </figure>
-        <div id="metodologia">La Metodología de Evaluación de Riesgos, nos permite entender cómo y hasta qué punto somos vulnerables a
+        <div id="text-personaje1">La Metodología de Evaluación de Riesgos, nos permite entender cómo y hasta qué punto
+            somos
+            vulnerables a
             los riesgos en materia de LD/FT, lo que nos permite asignar adecuadamente nuestros recursos y aplicar
             procesos de gestión de riesgos efectivos a las características de esos riesgos.
         </div>
     </div>
-    <div class="nivel2">
-        <div class="contenedor2">
-            <div class="grafica-pastel">
-                <figure class="grafica-n">
-                    <img src="/build/img/contenido/Pag17/grafica-pastel.svg" alt="grafica pastel">
-                </figure>
-                <figure class="grafica-pq">
-                    <img src="./build/img/contenido/Pag17/grafica-pastel-pq.svg" alt="grafica pastel">
-                </figure>
-            </div>
-        </div>
-        <div class="contenedor3">
-            <div class="buzon">
-                <figure>
-                    <img src="./build/img/contenido/Pag17/buzon.svg" alt="buzon">
-                </figure>
-                <p class="text-buzon">
-                    Buzón de Denuncia y correo del Oficial de Cumplimiento
-                </p>
-            </div>
 
-            <div class="contenedor-amarillo">
-                <p class="text-amarillo">
-                    Recuerda que la Compañía cuenta con un <b>Buzón de Denuncia</b> para operaciones internas
-                    preocupantes o inusuales que te permite enviar directamente, al área a cargo del Oficial de
-                    Cumplimiento, avisos sobre operaciones o conductas que detectes de cualquiera, de otros
-                    Colaboradores, Clientes o Agentes, identificadas como Operaciones Inusuales u Operaciones Internas
-                    Preocupantes, presentadas de forma aislada o reiterada.
-                </p>
-                <div class="persona2">
-                    <figure class="p2">
-                        <img src="./build/img/contenido/Pag17/persona2.svg" alt="persona 2">
-                    </figure>
-                </div>
+    <div id="cont2-pag17">
+        <div id="cont-graficaPastel">
+            <figure class="img-grafica">
+                <img src="./build/img/contenido/Pag17/grafica-pastel.svg" alt="Grafica Pastel">
+            </figure>
+        </div>
+        <div id="cont-buzon">
+            <div id="buzon">
+                <figure class="img-buzon">
+                    <img src="./build/img/contenido/Pag17/buzon.svg" alt="Buzon">
+                </figure>
+                <span id="text-buzon">Buzón de Denuncia y correo del Oficial de Cumplimiento</span>
+            </div>
+            <div id="personaje">
+                <span id="text-personaje2">Recuerda que la Compañía cuenta
+                    con un <b>Buzón de Denuncia</b> para operaciones internas preocupantes
+                    o inusuales que te permite enviar directamente, al área a cargo del Oficial de Cumplimiento, avisos
+                    sobre operaciones o conductas que detectes de cualquiera, de otros Colaboradores, Clientes o
+                    Agentes, identificadas como Operaciones Inusuales u Operaciones Internas Preocupantes, presentadas
+                    de forma aislada o reiterada.
+                </span>
+                <figure class="img-personaje2">
+                    <img src="./build/img/contenido/Pag17/persona2.svg" alt="Personaje 2">
+                </figure>
             </div>
         </div>
     </div>
 
-    <div class="intranet">
-        <figure class="persona-computadora">
-            <img src="./build/img/contenido/Pag17/persona-computadora.svg" alt="persona computadora">
+    <div id="cont3-pag17">
+        <figure class="img-personaje3">
+            <img src="./build/img/contenido/Pag17/persona-computadora.svg" alt="Personaje 3">
         </figure>
-        <div class="dialogo3">
-            <p class="text-globo">
-                En la intranet de las Aseguradoras y de la Reaseguradora, se cuenta con el Buzón de Denuncia para
-                operaciones internas preocupantes o inusuales para que todos colaboradores envíen de manera directa al
-                Oficial de Cumplimiento avisos sobre operaciones o conductas detectadas.
-            </p>
+        <div id="text-personaje3">
+            En la intranet de las Aseguradoras y de la Reaseguradora, se cuenta con el Buzón de Denuncia para
+            operaciones internas preocupantes o inusuales para que todos colaboradores envíen de manera directa al
+            Oficial de Cumplimiento avisos sobre operaciones o conductas detectadas.
         </div>
     </div>
 
-    <div class="cuadroazulpag17">
-        <figure class="i-click">
-            <img src="/build/img/contenido/Pag17/i-click.svg" alt="icono de interactividad">
+    <div id="instrucciones-pag17">
+        <figure class="img-clic">
+            <img src="./build/img/contenido/Pag17/i-click.svg" alt="Clic">
         </figure>
-        <p>
-            Da click en las flechas de <b>izquierda</b> o <b>derecha</b> para conocer mas
+        <p>Para conocer qué situaciones o conductas son tu deber reportar al General de Seguros/ General de Salud o
+            Patria, deslízate con las flechas de izquierda y derecha.
         </p>
     </div>
 
-    <div class="carrusel">
+    <div id="cont-carrusel">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="slide">
-                        <p class="txt-slide">
+                        <div class="txt-slide">
                             El cliente se niega a proporcionar datos o documentos de identificación
                             del Cliente presenta información que pudiera ser apócrifa o falsa necesarios
                             para la contratación.
-                        </p>
-                        <figure>
+                        </div>
+                        <figure class="img-slide">
                             <img src="./build/img/contenido/Pag17/slide1.svg" alt="slide 1">
                         </figure>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="slide">
-                        <p class="txt-slide">
+                        <div class="txt-slide">
                             Cuando los clientes intenten sobornar, persuadir o intimidar a los Colaboradores con el
                             propósito de realizar actividades u operaciones inusuales en contra de la Ley o de las
                             Políticas Internas.
-                        </p>
-                        <figure>
+                        </div>
+                        <figure class="img-slide">
                             <img src="./build/img/contenido/Pag17/slide2.svg" alt="slide 2">
                         </figure>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="slide">
-                        <p class="txt-slide">
+                        <div class="txt-slide">
                             La apariencia del cliente o su domicilio no concuerdan con la información.
-                        </p>
-                        <figure>
+                        </div>
+                        <figure class="img-slide">
                             <img src="./build/img/contenido/Pag17/slide3.svg" alt="slide 3">
                         </figure>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="slide">
-                        <p class="txt-slide">
+                        <div class="txt-slide">
                             La apariencia del cliente o su domicilio no concuerdan con la información.
-                        </p>
-                        <figure>
+                        </div>
+                        <figure class="img-slide">
                             <img src="./build/img/contenido/Pag17/slide4.svg" alt="slide 4">
                         </figure>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="slide">
-                        <p class="txt-slide">
+                        <div class="txt-slide">
                             La apariencia del cliente o su domicilio no concuerdan con la información.
-                        </p>
-                        <figure>
+                        </div>
+                        <figure class="img-maletin">
                             <img src="./build/img/contenido/Pag17/slide5.svg" alt="slide 5">
                         </figure>
                     </div>
