--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- Iconos -->
     <script src="https://kit.fontawesome.com/1cc726461f.js" crossorigin="anonymous"></script>
 
+    <!-- SCORM API -->
+    <script src="build/js/SCORM_API_wrapper.js"></script>
+
     <!-- JQUERY -->
     <script src="build/js/jquery.min.js"></script>
     <script src="build/js/jquery-ui.min.js"></script>
